k8s_mani/router-app_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: router-dashboard
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: router-dashboard
  ports:
    - name: http
      port: 5000
      targetPort: 5000
